# Implementation_scanner_HvA

./: .gitignore  CMakeLists.txt  README.md  collection.txt  config_file.json  testConfig.cfg  ziptest.b64
include/PicoSHA2/: picosha2.h
src/: compress.cpp  compress.h  config.cpp  config.h  main.cpp  main.h  scan.cpp  scan.h  serverConnect.cpp  serverConnect.h  testConfig.cfg
